--- a/app/views/courses/assignments.html.erb
+++ b/app/views/courses/assignments.html.erb
@@ -1,8 +1,11 @@
+<br>
+<br>
+<%= render 'submenu' %>
 <p id="notice"><%= notice %></p>
 
 <h1>Assignments</h1>
 
-<%= render 'list', assignments: @assignments %>
+<%= render 'assignments/list', assignments: @assignments %>
 
 <br>
 
