--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,3 +1,6 @@
+<br>
+<br>
+<%= render 'submenu' %>
 <p id="notice"><%= notice %></p>
 
 <p>
@@ -46,4 +49,9 @@
   </tbody>
 </table>
 
+<br>
 <%= link_to 'New Enrollment', new_enrollment_path %>
+
+<br>
+<br>
+<%= link_to 'New Assignment', assignments_path %>
