--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,8 @@
   </head>
 
   <body>
+  <%= link_to 'Courses', courses_path %>
+  <%= link_to 'People', people_path %>
     <%= yield %>
   </body>
 </html>
